<resources>
    <string name="app_name">CoinquiApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_help">Help</string>
    <string name="action_exit">Log Out</string>
    <string name="action_settings">Opzioni</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="aggiungi_un_turno">Aggiungi un Turno</string>
    <string name="addText">AddText</string>
    <string name="splash">TODO</string>
    <string name="Campicompleti">Campi Completo</string>
    <string name="campinoncompleti">I campi sono ancora vuoti</string>
    <string name="error_campi">Devi compilare i campi</string>
    <string name="check_aggiunto">Aggiunto</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_login2">Login2</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="password">Password</string>
    <string name="inserisci_immagine_profilo">Inserisci immagine profilo</string>
    <string name="crea_un_account_e_scegli_il_tuo_gruppo_casa">Crea un account e scegli il tuo gruppo casa</string>
    <string name="crea">crea</string>
    <string name="e_mail">E-mail</string>
    <string name="userPic" />
    <string name="NomeCasa">Casa Via Molise 63</string>
    <string name="NomeUtente">Genofeffa Cimosa</string>
    <string name="button_utenze" />
    <string name="button_spese" />
    <string name="button_turni" />
    <string name="button_bacheca" />
    <string name="aggiungi">Aggiungi</string>
    <string name="prezzo">€...</string>
    <string name="spesa">Spesa</string>
    <string name="nuova_spesa">Nuova Spesa</string>
    <string name="modifica">modifica</string>
    <string name="totale_spese_annue">Totale spese annue</string>
    <string name="aggiungi_spesa">Aggiungi Spesa</string>
    <string name="_200_00">€ 200.00</string>
    <string name="prova">,00</string>
    <string name="zerozero">,00</string>


</resources>
