<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.st3.coinquiapp.activity.Registrazione">


    <EditText
    android:id="@+id/inputNewEmail"
    android:layout_width="350dp"
    android:layout_height="46dp"
    android:layout_marginEnd="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginTop="16dp"
    android:hint="@string/e_mail"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="MissingConstraints,TextFields" />

    <EditText
        android:id="@+id/inputNewName"
        android:layout_width="350dp"
        android:layout_height="46dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:hint="@string/nome"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNewEmail"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/inputNewSurname"
        android:layout_width="350dp"
        android:layout_height="46dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:hint="@string/cognome"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNewName"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/inputNewPassword"
        android:layout_width="350dp"
        android:layout_height="46dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNewSurname"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/viewInputImmage"
        android:layout_width="245dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/inserisci_immagine_profilo"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toEndOf="@+id/bottonInputImmage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.739" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/bottonInputImmage"
        android:layout_width="73dp"
        android:layout_height="72dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="46dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:tint="@color/colorPrimaryDark"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewInputImmage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.749"
        app:rippleColor="@color/colorPrimaryDark"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/registrazioneOk"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:background="#73B3B3"
        android:text="@string/crea"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</android.support.constraint.ConstraintLayout>
